--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -10,9 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+
+      - uses: DeLaGuardo/setup-graalvm@2.0
         with:
-          java-version: 1.8
+          graalvm-version: '19.3.1.java11'
+
+      - uses: DeLaGuardo/setup-clojure@master
+        with:
+          # To use Clojure CLI 1.10.1.561 based on tools.deps
+          cli: '1.10.1.469'
+
+      - name: Build jar
+        run: clj -A:pack:build-lib
+
       - name: Publish package
         run: ./deploy.sh
         env:
