Try with sourceDirectory included

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
   <packaging>jar</packaging>
   <groupId>kepler16</groupId>
   <artifactId>http</artifactId>
-  <version>0.2.6</version>
+  <version>0.2.5</version>
   <name>http</name>
+  <build>
+    <sourceDirectory>src</sourceDirectory>
+  </build>
 </project>
