--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
 
@@ -17,21 +19,18 @@ jobs:
 
       - uses: DeLaGuardo/setup-clojure@master
         with:
-          # To use Clojure CLI 1.10.1.561 based on tools.deps
-          cli: '1.10.1.469'
+          cli: '1.10.1.727'
 
       - uses: s4u/maven-settings-action@v2.2.0
         with:
           servers: '[{"id": "github", "username": "${{secrets.ORG_GITHUB_ACTOR}}", "password": "${{secrets.ORG_GITHUB_TOKEN}}"}]'
           githubServer: false
 
-      - name: Update POM
-        run: clojure -Spom
+      - run: clojure -Spom
 
-      - name: Build jar
-        run: clojure -A:build:build-lib
+      # weird 2 pass thing to avoid overwriting file while reading it
+      - run: clojure -X:generate-pom > p.xml && mv p.xml pom.xml
 
-      - name: Publish package
-        run:  clojure -A:build:deploy | sh
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: clojure -A:build:build-lib
+
+      - run:  clojure -X:deploy | sh
